# lofi

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  BLUEPRINT_GAP_ANALYSIS.md  CHECKLIST_ANALYSIS.md  COLAB_FIX_INSTRUCTIONS.md  COMPLETE_SYSTEM_MANIFEST.md  CONTRIBUTING.md  CUSTOMIZATION_GUIDE.md  DEPLOYMENT.md  Dockerfile  EXTREME_PRODUCTION_SUITE.md  FINAL_DELIVERY_SUMMARY.md  GAP_ANALYSIS_DETAILED.md  GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LoFi_Training_Colab.ipynb  NEW_FEATURES_GUIDE.md  PHASE_6_CONTENT_COMMUNITY.md  QUICKSTART.md  README.md  REMAINING_GAP_ANALYSIS.md  ROADMAP.md  SECOND_ROUND_IMPROVEMENTS.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  SOP.md  UI_QUICKSTART.md  USAGE.md  WEBSITE_DEPLOYMENT.md  api_server.py  audio_only.py  batch_audio.py  config.example.json  config.json  config.yaml  docker-compose.yml  (+12 more)
.github/workflows/: ci.yml  code-quality.yml  release.yml
docs/: SETUP.md  USAGE.md  conf.py
examples/: README.md  api_usage.py  basic_workflow.py  batch_generation.py
integration/: connect_generator.py  email_marketing.py  music_distributor.py  youtube_community.py  youtube_endscreens.py
livestream/: radio_generator.py  stream_manager.py
monitoring/: prometheus.yml
monitoring/alerts/: api_alerts.yml
scripts/: 01_tokenize.py  02_build_dataset.py  03_train.py  04_generate.py  05_batch_generate.py
social/: social_media_manager.py
src/: __init__.py  ab_testing.py  advanced_audio.py  advanced_ml.py  advanced_rhythm.py  advanced_theory.py  ambient_sounds.py  analytics_dashboard.py  api.py  audio_mastering.py  audio_processor.py  cli.py  community_manager.py  competitor_analysis.py  config_schema.py  content_scheduler.py  copyright_protection.py  curriculum_learning.py  data_pipeline.py  diffusion_models.py  generator.py  keyword_research.py  lofi_effects.py  metadata_generator.py  mixing_mastering.py  model.py  music_analysis.py  music_theory.py  neural_audio.py  optimization.py  orchestration.py  parallel_processor.py  playlist_recommender.py  quality_scorer.py  realtime_generation.py  redis_infrastructure.py  rlhf.py  sample_manager.py  sample_pack_creator.py  simple_midi_generator.py  (+6 more)
src/utils/: __init__.py  error_handling.py  logging_config.py  resource_manager.py  security.py
static/: index.html
templates/: index.html  index.html.backup  index_comprehensive.html
tests/: __init__.py  conftest.py  test_advanced_audio.py  test_api.py  test_audio_processor.py  test_generator.py  test_integration.py  test_model.py  test_optimization.py  test_tokenizer.py  test_trainer.py
website/: README.md  about.html  free-pack.html  index.html  licensing.html  privacy.html  samples.html  terms.html
website/css/: style.css
website/js/: main.js
